Moving to supporting blog content / formatting

--- a/supporting-blog-content/colpali/04_token_pooling.ipynb
+++ b/supporting-blog-content/colpali/04_token_pooling.ipynb
@@ -23,6 +23,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
+    "\n",
     "def to_bit_vectors(embedding: list) -> list:\n",
     "    embeddings = []\n",
     "    for idx, patch_embedding in enumerate(embedding):\n",
@@ -56,7 +57,10 @@
     "import torch\n",
     "from colpali_engine.compression.token_pooling import HierarchicalTokenPooler\n",
     "\n",
-    "pooler = HierarchicalTokenPooler(pool_factor=3) # test on your data for a good pool_factor\n",
+    "pooler = HierarchicalTokenPooler(\n",
+    "    pool_factor=3\n",
+    ")  # test on your data for a good pool_factor\n",
+    "\n",
     "\n",
     "def pool_vectors(embedding: list) -> list:\n",
     "    tensor = torch.tensor(embedding).unsqueeze(0)\n",
@@ -94,10 +98,7 @@
     "mappings = {\n",
     "    \"mappings\": {\n",
     "        \"properties\": {\n",
-    "            \"pooled_col_pali_vectors\": {\n",
-    "                \"type\": \"rank_vectors\",\n",
-    "                \"element_type\": \"bit\"\n",
-    "            }\n",
+    "            \"pooled_col_pali_vectors\": {\"type\": \"rank_vectors\", \"element_type\": \"bit\"}\n",
     "        }\n",
     "    }\n",
     "}\n",
@@ -107,6 +108,7 @@
     "    es.indices.create(index=INDEX_NAME, body=mappings)\n",
     "else:\n",
     "    print(f\"[INFO] Index '{INDEX_NAME}' already exists.\")\n",
+    "\n",
     "\n",
     "def index_document(es_client, index, doc_id, document, retries=10, initial_backoff=1):\n",
     "    for attempt in range(1, retries + 1):\n",
@@ -155,30 +157,36 @@
     "from tqdm.notebook import tqdm\n",
     "import pickle\n",
     "\n",
+    "\n",
     "def process_file(file_name, vectors):\n",
     "    if es.exists(index=INDEX_NAME, id=file_name):\n",
     "        return\n",
     "\n",
     "    pooled_vectors = pool_vectors(vectors)\n",
-    "    \n",
+    "\n",
     "    bit_vectors = to_bit_vectors(pooled_vectors)\n",
-    "    \n",
+    "\n",
     "    index_document(\n",
-    "        es_client=es, \n",
-    "        index=INDEX_NAME, \n",
-    "        doc_id=file_name, \n",
-    "        document={\"pooled_col_pali_vectors\": bit_vectors}\n",
+    "        es_client=es,\n",
+    "        index=INDEX_NAME,\n",
+    "        doc_id=file_name,\n",
+    "        document={\"pooled_col_pali_vectors\": bit_vectors},\n",
     "    )\n",
     "\n",
-    "with open('col_pali_vectors.pkl', 'rb') as f:\n",
+    "\n",
+    "with open(\"col_pali_vectors.pkl\", \"rb\") as f:\n",
     "    file_to_multi_vectors = pickle.load(f)\n",
     "\n",
     "with ThreadPoolExecutor(max_workers=10) as executor:\n",
-    "    list(tqdm(\n",
-    "        executor.map(lambda item: process_file(*item), file_to_multi_vectors.items()),\n",
-    "        total=len(file_to_multi_vectors),\n",
-    "        desc=\"Indexing documents\"\n",
-    "    ))\n",
+    "    list(\n",
+    "        tqdm(\n",
+    "            executor.map(\n",
+    "                lambda item: process_file(*item), file_to_multi_vectors.items()\n",
+    "            ),\n",
+    "            total=len(file_to_multi_vectors),\n",
+    "            desc=\"Indexing documents\",\n",
+    "        )\n",
+    "    )\n",
     "\n",
     "print(f\"Completed indexing {len(file_to_multi_vectors)} documents\")"
    ]
@@ -213,10 +221,11 @@
     "model = ColPali.from_pretrained(\n",
     "    \"vidore/colpali-v1.3\",\n",
     "    torch_dtype=torch.float32,\n",
-    "    device_map=\"mps\", # \"mps\" for Apple Silicon, \"cuda\" if available, \"cpu\" otherwise\n",
+    "    device_map=\"mps\",  # \"mps\" for Apple Silicon, \"cuda\" if available, \"cpu\" otherwise\n",
     ").eval()\n",
     "\n",
     "col_pali_processor = ColPaliProcessor.from_pretrained(model_name)\n",
+    "\n",
     "\n",
     "def create_col_pali_query_vectors(query: str) -> list:\n",
     "    queries = col_pali_processor.process_queries([query]).to(model.device)\n",
@@ -256,18 +265,14 @@
     "    \"_source\": False,\n",
     "    \"query\": {\n",
     "        \"script_score\": {\n",
-    "            \"query\": {\n",
-    "                \"match_all\": {}\n",
-    "            },\n",
+    "            \"query\": {\"match_all\": {}},\n",
     "            \"script\": {\n",
     "                \"source\": \"maxSimDotProduct(params.query_vector, 'pooled_col_pali_vectors')\",\n",
-    "                \"params\": {\n",
-    "                    \"query_vector\": query_vector\n",
-    "                }\n",
-    "            }\n",
+    "                \"params\": {\"query_vector\": query_vector},\n",
+    "            },\n",
     "        }\n",
     "    },\n",
-    "    \"size\": 5\n",
+    "    \"size\": 5,\n",
     "}\n",
     "\n",
     "results = es.search(index=INDEX_NAME, body=es_query)\n",
@@ -289,9 +294,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We kill the kernel forcefully to free up the memory from the ColPali model. \n",
+    "# We kill the kernel forcefully to free up the memory from the ColPali model.\n",
     "print(\"Shutting down the kernel to free memory...\")\n",
     "import os\n",
+    "\n",
     "os._exit(0)"
    ]
   }
