--- a/notebooks/enterprise-search/app-search-engine-exporter.ipynb
+++ b/notebooks/enterprise-search/app-search-engine-exporter.ipynb
@@ -18,7 +18,7 @@
     "- how to export curations\n",
     "- how to create a new index in Elasticsearch\n",
     "- how to add sparse vector fields\n",
-    "-[how to query the new Elasticsearch index\n",
+    "- how to query the new Elasticsearch index\n",
     "\n",
     "## Setup\n",
     "\n",
