--- a/supporting-blog-content/colpali/02_bit_vectors.ipynb
+++ b/supporting-blog-content/colpali/02_bit_vectors.ipynb
@@ -39,18 +39,14 @@
     "import numpy as np\n",
     "\n",
     "\n",
-    "def to_bit_vectors(embedding: list) -> list:\n",
-    "    embeddings = []\n",
-    "    for idx, patch_embedding in enumerate(embedding):\n",
-    "        patch_embedding = np.array(patch_embedding)\n",
-    "        binary_vector = (\n",
-    "            np.packbits(np.where(patch_embedding > 0, 1, 0))\n",
-    "            .astype(np.int8)\n",
-    "            .tobytes()\n",
-    "            .hex()\n",
-    "        )\n",
-    "        embeddings.append(binary_vector)\n",
-    "    return embeddings"
+    "def to_bit_vectors(embeddings: list) -> list:\n",
+    "    return [\n",
+    "        np.packbits(np.where(np.array(embedding) > 0, 1, 0))\n",
+    "        .astype(np.int8)\n",
+    "        .tobytes()\n",
+    "        .hex()\n",
+    "        for embedding in embeddings\n",
+    "    ]"
    ]
   },
   {
@@ -71,7 +67,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] Index 'searchlabs-colpali-hamming' already exists.\n"
+      "[INFO] Creating index: searchlabs-colpali-hamming\n"
      ]
     }
    ],
@@ -126,7 +122,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "022b4af8891b4a06962e023c7f92d8f4",
+       "model_id": "8be1b809674143c486705f1699f440dd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -191,7 +187,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "064e33061bac40e4802138e30599225b",
+       "model_id": "63a206f0fc2d491196b83b450eb4b93a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -251,7 +247,7 @@
     {
      "data": {
       "text/html": [
-       "<div style='display: flex; flex-wrap: wrap; align-items: flex-start;'><img src=\"searchlabs-colpali/image_104.jpg\" alt=\"image_104.jpg\" style=\"max-width:300px; height:auto; margin:10px;\"><img src=\"searchlabs-colpali/image_3.jpg\" alt=\"image_3.jpg\" style=\"max-width:300px; height:auto; margin:10px;\"><img src=\"searchlabs-colpali/image_12.jpg\" alt=\"image_12.jpg\" style=\"max-width:300px; height:auto; margin:10px;\"><img src=\"searchlabs-colpali/image_2.jpg\" alt=\"image_2.jpg\" style=\"max-width:300px; height:auto; margin:10px;\"><img src=\"searchlabs-colpali/image_92.jpg\" alt=\"image_92.jpg\" style=\"max-width:300px; height:auto; margin:10px;\"></div>"
+       "<div style='display: flex; flex-wrap: wrap; align-items: flex-start;'><img src=\"searchlabs-colpali/image_104.jpg\" alt=\"image_104.jpg\" style=\"max-width:300px; height:auto; margin:10px;\"><img src=\"searchlabs-colpali/image_3.jpg\" alt=\"image_3.jpg\" style=\"max-width:300px; height:auto; margin:10px;\"><img src=\"searchlabs-colpali/image_12.jpg\" alt=\"image_12.jpg\" style=\"max-width:300px; height:auto; margin:10px;\"><img src=\"searchlabs-colpali/image_2.jpg\" alt=\"image_2.jpg\" style=\"max-width:300px; height:auto; margin:10px;\"><img src=\"searchlabs-colpali/image_110.jpg\" alt=\"image_110.jpg\" style=\"max-width:300px; height:auto; margin:10px;\"></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
