--- a/supporting-blog-content/colpali/03_average_vector.ipynb
+++ b/supporting-blog-content/colpali/03_average_vector.ipynb
@@ -32,18 +32,14 @@
     "import numpy as np\n",
     "\n",
     "\n",
-    "def to_bit_vectors(embedding: list) -> list:\n",
-    "    embeddings = []\n",
-    "    for idx, patch_embedding in enumerate(embedding):\n",
-    "        patch_embedding = np.array(patch_embedding)\n",
-    "        binary_vector = (\n",
-    "            np.packbits(np.where(patch_embedding > 0, 1, 0))\n",
-    "            .astype(np.int8)\n",
-    "            .tobytes()\n",
-    "            .hex()\n",
-    "        )\n",
-    "        embeddings.append(binary_vector)\n",
-    "    return embeddings\n",
+    "def to_bit_vectors(embeddings: list) -> list:\n",
+    "    return [\n",
+    "        np.packbits(np.where(np.array(embedding) > 0, 1, 0))\n",
+    "        .astype(np.int8)\n",
+    "        .tobytes()\n",
+    "        .hex()\n",
+    "        for embedding in embeddings\n",
+    "    ]\n",
     "\n",
     "\n",
     "def to_avg_vector(vectors):\n",
@@ -79,7 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] Index 'searchlabs-colpali-average-vector' already exists.\n"
+      "[INFO] Creating index: searchlabs-colpali-average-vector\n"
      ]
     }
    ],
@@ -149,7 +145,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a9d08424a504956a4f50208a19cce90",
+       "model_id": "bb2e8a4c74b5494c8203308df49ec750",
        "version_major": 2,
        "version_minor": 0
       },
@@ -216,7 +212,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7967bc15d67486ab5e2db2c673db036",
+       "model_id": "bdf787df90d24a289fa70e6abd0d9597",
        "version_major": 2,
        "version_minor": 0
       },
@@ -267,7 +263,7 @@
     {
      "data": {
       "text/html": [
-       "<div style='display: flex; flex-wrap: wrap; align-items: flex-start;'><img src=\"searchlabs-colpali/image_12.jpg\" alt=\"image_12.jpg\" style=\"max-width:300px; height:auto; margin:10px;\"><img src=\"searchlabs-colpali/image_3.jpg\" alt=\"image_3.jpg\" style=\"max-width:300px; height:auto; margin:10px;\"><img src=\"searchlabs-colpali/image_49.jpg\" alt=\"image_49.jpg\" style=\"max-width:300px; height:auto; margin:10px;\"><img src=\"searchlabs-colpali/image_123.jpg\" alt=\"image_123.jpg\" style=\"max-width:300px; height:auto; margin:10px;\"><img src=\"searchlabs-colpali/image_104.jpg\" alt=\"image_104.jpg\" style=\"max-width:300px; height:auto; margin:10px;\"></div>"
+       "<div style='display: flex; flex-wrap: wrap; align-items: flex-start;'><img src=\"searchlabs-colpali/image_3.jpg\" alt=\"image_3.jpg\" style=\"max-width:300px; height:auto; margin:10px;\"><img src=\"searchlabs-colpali/image_12.jpg\" alt=\"image_12.jpg\" style=\"max-width:300px; height:auto; margin:10px;\"><img src=\"searchlabs-colpali/image_104.jpg\" alt=\"image_104.jpg\" style=\"max-width:300px; height:auto; margin:10px;\"><img src=\"searchlabs-colpali/image_2.jpg\" alt=\"image_2.jpg\" style=\"max-width:300px; height:auto; margin:10px;\"><img src=\"searchlabs-colpali/image_250.jpg\" alt=\"image_250.jpg\" style=\"max-width:300px; height:auto; margin:10px;\"></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -329,7 +325,7 @@
     {
      "data": {
       "text/html": [
-       "<div style='display: flex; flex-wrap: wrap; align-items: flex-start;'><img src=\"searchlabs-colpali/image_104.jpg\" alt=\"image_104.jpg\" style=\"max-width:300px; height:auto; margin:10px;\"><img src=\"searchlabs-colpali/image_3.jpg\" alt=\"image_3.jpg\" style=\"max-width:300px; height:auto; margin:10px;\"><img src=\"searchlabs-colpali/image_2.jpg\" alt=\"image_2.jpg\" style=\"max-width:300px; height:auto; margin:10px;\"><img src=\"searchlabs-colpali/image_12.jpg\" alt=\"image_12.jpg\" style=\"max-width:300px; height:auto; margin:10px;\"><img src=\"searchlabs-colpali/image_49.jpg\" alt=\"image_49.jpg\" style=\"max-width:300px; height:auto; margin:10px;\"></div>"
+       "<div style='display: flex; flex-wrap: wrap; align-items: flex-start;'><img src=\"searchlabs-colpali/image_104.jpg\" alt=\"image_104.jpg\" style=\"max-width:300px; height:auto; margin:10px;\"><img src=\"searchlabs-colpali/image_3.jpg\" alt=\"image_3.jpg\" style=\"max-width:300px; height:auto; margin:10px;\"><img src=\"searchlabs-colpali/image_2.jpg\" alt=\"image_2.jpg\" style=\"max-width:300px; height:auto; margin:10px;\"><img src=\"searchlabs-colpali/image_12.jpg\" alt=\"image_12.jpg\" style=\"max-width:300px; height:auto; margin:10px;\"><img src=\"searchlabs-colpali/image_250.jpg\" alt=\"image_250.jpg\" style=\"max-width:300px; height:auto; margin:10px;\"></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
