--- a/notebooks/enterprise-search/app-search-engine-exporter.ipynb
+++ b/notebooks/enterprise-search/app-search-engine-exporter.ipynb
@@ -187,36 +187,36 @@
     "query_rules = []\n",
     "\n",
     "for curation in app_search.list_curations(engine_name=ENGINE_NAME).body[\"results\"]:\n",
-    "    if (curation[\"promoted\"]):\n",
-    "      query_rules.append(\n",
-    "          {\n",
-    "              \"rule_id\": curation[\"id\"] + \"-pinned\",\n",
-    "              \"type\": \"pinned\",\n",
-    "              \"criteria\": [\n",
-    "                  {\n",
-    "                      \"type\": \"exact\",\n",
-    "                      \"metadata\": \"user_query\",\n",
-    "                      \"values\": curation[\"queries\"],\n",
-    "                  }\n",
-    "              ],\n",
-    "              \"actions\": {\"ids\": curation[\"promoted\"]},\n",
-    "          }\n",
-    "      )\n",
-    "    if(curation[\"hidden\"]):\n",
-    "      query_rules.append(\n",
-    "          {\n",
-    "              \"rule_id\": curation[\"id\"] + \"-exclude\",\n",
-    "              \"type\": \"exclude\",\n",
-    "              \"criteria\": [\n",
-    "                  {\n",
-    "                      \"type\": \"exact\",\n",
-    "                      \"metadata\": \"user_query\",\n",
-    "                      \"values\": curation[\"queries\"],\n",
-    "                  }\n",
-    "              ],\n",
-    "              \"actions\": {\"ids\": curation[\"hidden\"]},\n",
-    "          }\n",
-    "      )\n",
+    "    if curation[\"promoted\"]:\n",
+    "        query_rules.append(\n",
+    "            {\n",
+    "                \"rule_id\": curation[\"id\"] + \"-pinned\",\n",
+    "                \"type\": \"pinned\",\n",
+    "                \"criteria\": [\n",
+    "                    {\n",
+    "                        \"type\": \"exact\",\n",
+    "                        \"metadata\": \"user_query\",\n",
+    "                        \"values\": curation[\"queries\"],\n",
+    "                    }\n",
+    "                ],\n",
+    "                \"actions\": {\"ids\": curation[\"promoted\"]},\n",
+    "            }\n",
+    "        )\n",
+    "    if curation[\"hidden\"]:\n",
+    "        query_rules.append(\n",
+    "            {\n",
+    "                \"rule_id\": curation[\"id\"] + \"-exclude\",\n",
+    "                \"type\": \"exclude\",\n",
+    "                \"criteria\": [\n",
+    "                    {\n",
+    "                        \"type\": \"exact\",\n",
+    "                        \"metadata\": \"user_query\",\n",
+    "                        \"values\": curation[\"queries\"],\n",
+    "                    }\n",
+    "                ],\n",
+    "                \"actions\": {\"ids\": curation[\"hidden\"]},\n",
+    "            }\n",
+    "        )\n",
     "\n",
     "elasticsearch.query_rules.put_ruleset(ruleset_id=ENGINE_NAME, rules=query_rules)"
    ]
@@ -234,7 +234,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(json.dumps(elasticsearch.query_rules.get_ruleset(ruleset_id=ENGINE_NAME).body, indent=2))"
+    "print(\n",
+    "    json.dumps(\n",
+    "        elasticsearch.query_rules.get_ruleset(ruleset_id=ENGINE_NAME).body, indent=2\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -649,9 +653,7 @@
     "# add the semantic_text field to our mapping for each field defined\n",
     "for field_name in SEMANTIC_TEXT_FIELDS:\n",
     "    semantic_field_name = field_name + \"_semantic\"\n",
-    "    mapping[semantic_field_name] = {\n",
-    "        \"type\": \"semantic_text\"\n",
-    "    }\n",
+    "    mapping[semantic_field_name] = {\"type\": \"semantic_text\"}\n",
     "\n",
     "# and for our text fields, add a \"copy_to\" directive to copy the text to the semantic_text field\n",
     "for field_name in SEMANTIC_TEXT_FIELDS:\n",
@@ -838,7 +840,7 @@
     "        \"order\": \"score\",\n",
     "        \"encoder\": \"html\",\n",
     "        \"require_field_match\": False,\n",
-    "        \"fields\": { \"description\" : { \"pre_tags\" : [\"<em>\"], \"post_tags\" : [\"</em>\"] } },\n",
+    "        \"fields\": {\"description\": {\"pre_tags\": [\"<em>\"], \"post_tags\": [\"</em>\"]}},\n",
     "    },\n",
     "    \"size\": 10,\n",
     "    \"_source\": result_fields,\n",
@@ -895,13 +897,7 @@
     "\n",
     "for field_name in SEMANTIC_TEXT_FIELDS:\n",
     "    semantic_field_name = field_name + \"_semantic\"\n",
-    "    semantic_text_queries.append(\n",
-    "        {\n",
-    "            \"match\": {\n",
-    "                semantic_field_name: QUERY_STRING\n",
-    "            }\n",
-    "        }\n",
-    "    )\n",
+    "    semantic_text_queries.append({\"match\": {semantic_field_name: QUERY_STRING}})\n",
     "\n",
     "semantic_query = {\"bool\": {\"should\": semantic_text_queries}}\n",
     "print(f\"Elasticsearch query:\\n{json.dumps(semantic_query, indent=2)}\\n\")"
