Make internal links plaintext in app-search-engine-exporter.ipynb (#420)

--- a/notebooks/enterprise-search/app-search-engine-exporter.ipynb
+++ b/notebooks/enterprise-search/app-search-engine-exporter.ipynb
@@ -14,11 +14,11 @@
     "\n",
     "We will look at:\n",
     "\n",
-    "- [how to export synonyms](#export-app-search-synonyms-in-elasticsearch)\n",
-    "- [how to export curations](#export-app-search-curations-in-elasticsearch)\n",
-    "- [how to create a new index in Elasticsearch](#create-a-new-elasticsearch-index)\n",
-    "- [how to add sparse vector fields](#add-sparse_vector-fields-for-semantic-search-optional)\n",
-    "- [how to query the new Elasticsearch index](#query-the-new-elasticsearch-index)\n",
+    "- how to export synonyms\n",
+    "- how to export curations\n",
+    "- how to create a new index in Elasticsearch\n",
+    "- how to add sparse vector fields\n",
+    "- how to query the new Elasticsearch index\n",
     "\n",
     "## Setup\n",
     "\n",
