issue found https://github.com/elastic/elasticsearch-labs/issues/421
Issue was found here: https://github.com/elastic/elasticsearch-labs/issues/421
fixed - called the method to create the search template

--- a/supporting-blog-content/unifying-elastic-vector-database-and-llms-for-intelligent-query/Unifying_Elastic_Vector_Database_and_LLMs_for_Intelligent_Query.ipynb
+++ b/supporting-blog-content/unifying-elastic-vector-database-and-llms-for-intelligent-query/Unifying_Elastic_Vector_Database_and_LLMs_for_Intelligent_Query.ipynb
@@ -539,7 +539,9 @@
     "            print(f\"Error deleting template '{template_id}': {e}\")\n",
     "\n",
     "\n",
-    "def create_search_template(template_id, template_content):\n",
+    "def create_search_template(\n",
+    "    template_id=TEMPLATE_ID, template_content=search_template_content\n",
+    "):\n",
     "    \"\"\"Creates a new search template\"\"\"\n",
     "    try:\n",
     "        es.put_script(id=template_id, body=template_content)\n",
@@ -1007,7 +1009,9 @@
     "print(\"Creating hotels index...\")\n",
     "create_index()\n",
     "print(\"Ingesting hotels data...\")\n",
-    "ingest_data()"
+    "ingest_data()\n",
+    "print(\"Creating Search Template...\")\n",
+    "create_search_template()"
    ]
   },
   {
